fix video bg on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 .cardLink {
 }
 
-.videoTag {
+#videoTag {
   height: 100%;
   width: 100%;
   float: left;
